# ClassPilot

./: .gitignore  README.md
ClassPilot/: README.md  main.py  pyproject.toml
ClassPilot/classpilot/: __init__.py
ClassPilot/classpilot/application/: services.py
ClassPilot/classpilot/domain/: entities.py  errors.py  repositories.py
ClassPilot/classpilot/infrastructure/: json_store.py
ClassPilot/classpilot/presentation/: api.py
ClassPilot/docs/: api_examples.md  architecture.md
ClassPilot/tests/: test_api.py  test_service.py
